test/data/resolver/valid/literal_int_projection.cypher
MATCH (p:Person) RETURN 42 AS answer
