test/data/resolver/invalid/return_distinct.cypher
MATCH (p:Person) RETURN DISTINCT p
